# parser

./: .gitignore  README.md  stack.yaml  test-proj.cabal
app/: Main.hs
src/: Lib.hs  TestTypes.hs
